fixed word-wrap style bug for todos with long text

--- a/styles.css
+++ b/styles.css
@@ -70,11 +70,13 @@ footer {
 }
 
 .todo-item {
-  height: 60px;
+  min-height: 60px;
   font-size: 24px;
+
   display: flex;
   align-items: center;
   border-bottom: 1px solid #ddd;
+  max-width: 100%;
 }
 
 .todo-item:focus {
@@ -135,13 +137,20 @@ footer {
 
 .todo-text {
   flex: 1;
+  width: auto;
+  padding: 10px 0px;
+  word-break: break-all;
+  white-space: normal;   
+  word-wrap: break-word; 
+  overflow-wrap: break-word;
+
 }
 
 .todo-edit {
   position: relative;
   z-index: 3;
   padding-left: 50px;
-  height: 100%;
+  height: 60px;
   width: 100%;
   box-shadow: 0 0 5px 2px  var(--main-red-color-transparent); 
   font-size: 24px;
